Added all results

--- a/A1/eval.ipynb
+++ b/A1/eval.ipynb
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "5625f1f4",
    "metadata": {},
    "outputs": [
@@ -1859,10 +1859,9 @@
     }
    ],
    "source": [
-    "coarse_df.to_csv(\"coarse_results.csv\", index=False)\n",
-    "fine_df.to_csv(\"fine_results.csv\", index=False)\n",
-    "thr_df.to_csv(\"thr_results.csv\", index=False)\n",
-    "print(\"Saved: coarse_results.csv, fine_results.csv, thr_results.csv, best_table_auto.csv\")"
+    "results_df = pd.concat([unigram_df, coarse_df, fine_df, finer_df, thr_df], ignore_index=True)\n",
+    "results_df.to_csv(\"results_all.csv\", index=False)\n",
+    "print(\"Saved: results_all.csv\")"
    ]
   }
  ],
