--- a/A1/eval.ipynb
+++ b/A1/eval.ipynb
@@ -1829,9 +1829,9 @@
    "source": [
     "### Analysis\n",
     "\n",
-    "From all experiments (with UNK <= 2), the best whitespace configuration with lowest ppl was alpha=0.1, UNK=2 with ppl of around 115\n",
+    "From all experiments (with UNK <= 2), the best whitespace configuration with lowest ppl was alpha=0.01, UNK=2 with ppl of around 115\n",
     "\n",
-    "For BPE, the best was alpha=0.1, UNK=2 with perplexity of around 80. This is a huge improvement over whitespace tokenization, and also it confirms that the optimal alpha is very small, and unknown-word handling helps for whitespace but not much for BPE\n",
+    "For BPE, the best was alpha=0.04, UNK=2 with perplexity of around 80. This is a huge improvement over whitespace tokenization, and also it confirms that the optimal alpha is very small, and unknown-word handling helps for whitespace but not much for BPE\n",
     "\n",
     "This perplexity would be even lower if we use a higher UNK threshold, but the alpha would likely stay around the same lower region"
    ]
@@ -1841,12 +1841,12 @@
    "id": "0eefb9e3",
    "metadata": {},
    "source": [
-    "## X. Save CSVs\n"
+    "## X. Save all test results to CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "5625f1f4",
    "metadata": {},
    "outputs": [
@@ -1854,7 +1854,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: coarse_results.csv, fine_results.csv, thr_results.csv, best_table_auto.csv\n"
+      "Saved: results_all.csv\n"
      ]
     }
    ],
